# calculo-numerico

./: .gitignore
Avaliacao_1/: avaliacao_metodos_numericos_codigo.py  avaliacao_metodos_numericos_solucao.tex  heat2d_avaliacao_cuda_fallback.py  heat2d_solver_cuda_fallback.py  main.py  requirements.txt  requirements_avaliacao1.txt  requirements_heat2d.txt  solucao_avaliacao1_metodos_numericos.tex  solucao_heat2d.tex
Avalliacao_02/: .gitignore  NOTAS_METODOLOGICAS.md  README.md  requirements.txt
Lista 01/: Q-4.py  Q-5.py  questao1_volume_fantasma.py  questao2_volume_fantasma.py
PR1/: README.md  pyproject.toml
PR1/app/: __init__.py  entry.py
PR1/app/backend/: derivative_methods.py  derivative_service.py  pde_kernels.c  pde_kernels.pyx  pde_methods.py  pde_service.py  pdes.py
PR1/app/ui/: __init__.py  main_window.py
PR1/app/ui/tabs/: pde_tab.py
PR1/pr1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
aula_07/: main.py
aula_2/: main.py
aula_4/: README.md  main.py  pyproject.toml  setup.py
aula_4/app/: __init__.py  __main__.py
aula_4/app/backend/: __init__.py  expression_eval.py  functions.py  pde_kernels.c  pde_methods.py  pde_service.py  pdes.py
aula_4/app/ui/: __init__.py  main_window.py
aula_4/app/ui/tabs/: __init__.py  derivative_tab.py  pde_tab.py
aula_4/aula_4.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
aula_5/: README.md  main.py  requirements.txt
aula_6/: main.py
derivative_compare_app/: analysis_core.py  app_window.py  export_utils.py  expression_utils.py  main.py  method_registry.py  plot_widget.py  (+2 more)
(+32 files in other folders)
