[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pr1"
version = "0.1.0"
description = "Aplicacao PyQt6 para estimativas numericas de derivadas e EDPs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "PyQt6>=6.7",
]

[project.scripts]
pr1 = "app.entry:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]
